tests/baselines/reference/fixCrashAliasLookupForDefauledImport.errors.txt
usage.ts(7,5): error TS2352: Conversion of type 'number' to type 'Foo<number>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== input.ts (0 errors) ====
    export type Foo<T = string> = {};
    
==== usage.ts (1 errors) ====
    import {Foo} from "./input";
    
    function bar<T>(element: Foo) {
        return 1;
    }
    
    bar(1 as Foo<number>);
        ~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'number' to type 'Foo<number>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    